--- a/job_descriptions.ipynb
+++ b/job_descriptions.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +41,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -108,38 +109,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>B.Tech</td>\n",
-       "      <td>City of Port Louis</td>\n",
-       "      <td>Mauritius</td>\n",
-       "      <td>Temporary</td>\n",
-       "      <td>Both</td>\n",
-       "      <td>Marketing Director</td>\n",
-       "      <td>Digital Marketing Director</td>\n",
-       "      <td>Digital Marketing Directors lead digital marke...</td>\n",
-       "      <td>{'Life and Disability Insurance, Stock Options...</td>\n",
-       "      <td>Digital marketing strategy Marketing analytics...</td>\n",
-       "      <td>Develop and oversee digital marketing strategi...</td>\n",
-       "      <td>61</td>\n",
-       "      <td>80</td>\n",
+       "      <td>MBA</td>\n",
+       "      <td>Montevideo</td>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>Full-Time</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Network Security Specialist</td>\n",
+       "      <td>Security Consultant</td>\n",
+       "      <td>A Security Consultant is responsible for asses...</td>\n",
+       "      <td>{'Transportation Benefits, Professional Develo...</td>\n",
+       "      <td>Security consulting Risk assessment Security a...</td>\n",
+       "      <td>Provide expert advice on security strategies a...</td>\n",
+       "      <td>64</td>\n",
+       "      <td>120</td>\n",
        "      <td>3</td>\n",
-       "      <td>8</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>MBA</td>\n",
-       "      <td>Port of Spain</td>\n",
-       "      <td>Trinidad and Tobago</td>\n",
-       "      <td>Contract</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Procurement Manager</td>\n",
-       "      <td>Procurement Analyst</td>\n",
-       "      <td>Analyze procurement data, identify cost-saving...</td>\n",
-       "      <td>{'Life and Disability Insurance, Stock Options...</td>\n",
-       "      <td>Procurement processes Vendor assessment Contra...</td>\n",
-       "      <td>Analyze procurement data and trends to support...</td>\n",
-       "      <td>55</td>\n",
-       "      <td>116</td>\n",
-       "      <td>0</td>\n",
+       "      <td>B.Com</td>\n",
+       "      <td>Cockburn Town</td>\n",
+       "      <td>Turks and Caicos Islands</td>\n",
+       "      <td>Part-Time</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Architect</td>\n",
+       "      <td>Sustainable Design Specialist</td>\n",
+       "      <td>Sustainable Design Specialists incorporate eco...</td>\n",
+       "      <td>{'Tuition Reimbursement, Stock Options or Equi...</td>\n",
+       "      <td>Sustainable design principles Energy efficienc...</td>\n",
+       "      <td>Focus on sustainable and eco-friendly architec...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -147,36 +148,36 @@
        "</div>"
       ],
       "text/plain": [
-       "  Qualifications            location              Country  Work Type  \\\n",
-       "0         B.Tech  City of Port Louis            Mauritius  Temporary   \n",
-       "1            MBA       Port of Spain  Trinidad and Tobago   Contract   \n",
+       "  Qualifications       location                   Country  Work Type  \\\n",
+       "0            MBA     Montevideo                   Uruguay  Full-Time   \n",
+       "1          B.Com  Cockburn Town  Turks and Caicos Islands  Part-Time   \n",
        "\n",
-       "  Preference            Job Title                        Role  \\\n",
-       "0       Both   Marketing Director  Digital Marketing Director   \n",
-       "1       Male  Procurement Manager         Procurement Analyst   \n",
+       "  Preference                    Job Title                           Role  \\\n",
+       "0     Female  Network Security Specialist            Security Consultant   \n",
+       "1     Female                    Architect  Sustainable Design Specialist   \n",
        "\n",
        "                                     Job Description  \\\n",
-       "0  Digital Marketing Directors lead digital marke...   \n",
-       "1  Analyze procurement data, identify cost-saving...   \n",
+       "0  A Security Consultant is responsible for asses...   \n",
+       "1  Sustainable Design Specialists incorporate eco...   \n",
        "\n",
        "                                            Benefits  \\\n",
-       "0  {'Life and Disability Insurance, Stock Options...   \n",
-       "1  {'Life and Disability Insurance, Stock Options...   \n",
+       "0  {'Transportation Benefits, Professional Develo...   \n",
+       "1  {'Tuition Reimbursement, Stock Options or Equi...   \n",
        "\n",
        "                                              Skills  \\\n",
-       "0  Digital marketing strategy Marketing analytics...   \n",
-       "1  Procurement processes Vendor assessment Contra...   \n",
+       "0  Security consulting Risk assessment Security a...   \n",
+       "1  Sustainable design principles Energy efficienc...   \n",
        "\n",
-       "                                    Responsibilities Salary Min Salary Max  \\\n",
-       "0  Develop and oversee digital marketing strategi...         61         80   \n",
-       "1  Analyze procurement data and trends to support...         55        116   \n",
+       "                                    Responsibilities  Salary Min  Salary Max  \\\n",
+       "0  Provide expert advice on security strategies a...          64         120   \n",
+       "1  Focus on sustainable and eco-friendly architec...          60         113   \n",
        "\n",
        "  Experience Min Experience Max  \n",
-       "0             3              8   \n",
-       "1             0             12   "
+       "0             3             15   \n",
+       "1             3             12   "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,6 +187,7 @@
     "df.dropna(inplace=True)\n",
     "df.drop(['Job Id', 'latitude', 'longitude', 'Contact Person', 'Contact', 'Company Size', 'Job Posting Date', 'Company Profile', 'Company', 'Job Portal'], axis=1, inplace=True)\n",
     "df.rename(columns={'skills': 'Skills'}, inplace=True)\n",
+    "df.drop_duplicates(subset=['Job Description', 'Benefits', 'Skills', 'Responsibilities'], inplace=True)\n",
     "df[['Salary Min', 'Salary Max']] = df['Salary Range'].str.split('-', expand=True)\n",
     "df[['Salary Min', 'Salary Max']] = df[['Salary Min', 'Salary Max']].apply(lambda x: x.str.replace('$', ''))\n",
     "df[['Salary Min', 'Salary Max']] = df[['Salary Min', 'Salary Max']].apply(lambda x: x.str.replace('K', ''))\n",
@@ -193,22 +195,24 @@
     "df[['Experience Min', 'Experience Max']] = df['Experience'].str.split('to', expand=True)\n",
     "df[['Experience Min', 'Experience Max']] = df[['Experience Min', 'Experience Max']].apply(lambda x: x.str.replace('Years', ''))\n",
     "df.drop(['Experience'], axis=1, inplace=True)\n",
+    "df['Salary Min'] = pd.to_numeric(df['Salary Min'], errors='coerce')\n",
+    "df['Salary Max'] = pd.to_numeric(df['Salary Max'], errors='coerce')\n",
     "df.reset_index(drop=True, inplace=True)\n",
     "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(16118, 15)"
+       "(3936, 15)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(16118, 1542)\n",
-      "(16118, 1542)\n",
-      "(16118, 1542)\n"
+      "(3936, 1542)\n",
+      "(3936, 1542)\n",
+      "(3936, 1542)\n"
      ]
     }
    ],
@@ -281,14 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Closest to index 0: [16068  9623 14125 14111 13030  9713 12322 10102  3927  3889]\n"
+      "Closest to index 0: [  13 3103 2898 2298 2812  403 1732 2497  466 3171]\n"
      ]
     }
    ],
@@ -305,10 +309,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_row_index = 0\n",
+    "\n",
+    "target_salary_min = df.loc[target_row_index, 'Salary Min']\n",
+    "target_salary_max = df.loc[target_row_index, 'Salary Max']\n",
+    "\n",
+    "distances = np.sqrt((df['Salary Min'] - target_salary_min)**2 + (df['Salary Max'] - target_salary_max)**2)\n",
+    "\n",
+    "sorted_indices = distances.argsort()\n",
+    "\n",
+    "N = 10\n",
+    "most_similar_rows = df.iloc[sorted_indices[1:N+1]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
