--- a/freelance.ipynb
+++ b/freelance.ipynb
@@ -2,9 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/kasra/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to /Users/kasra/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to /Users/kasra/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -17,7 +40,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "pd.set_option('display.max_colwidth', None)\n",
+    "# pd.set_option('display.max_colwidth', None)\n",
     "\n",
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')\n",
@@ -26,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,31 +114,6 @@
     "closest_indices = related_indices[1:11]\n",
     "\n",
     "print(f\"Closest to index 0: {closest_indices}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Closest to index 0: [444 581 579 132 530 510 509 705 480 481]\n"
-     ]
-    }
-   ],
-   "source": [
-    "budget_similarity_matrix = cosine_similarity(df[['Budget']])\n",
-    "description_similarity_matrix = cosine_similarity(description_vector)\n",
-    "\n",
-    "combined_similarity_matrix = budget_similarity_matrix + description_similarity_matrix\n",
-    "\n",
-    "related_indices = combined_similarity_matrix[0].argsort()[::-1]\n",
-    "closest_indices = related_indices[1:11]\n",
-    "\n",
-    "print(f\"Closest to index 0: {closest_indices}\")\n"
    ]
   },
   {
