features for filtering the results added

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "2        Paralegal  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,6 @@
        "      <th>Currency</th>\n",
        "      <th>Budget</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Freelancer Preferred From</th>\n",
        "      <th>Type</th>\n",
        "      <th>Description</th>\n",
        "      <th>Duration</th>\n",
@@ -225,7 +224,6 @@
        "      <td>EUR</td>\n",
        "      <td>60.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>We are looking to improve the banner images on...</td>\n",
        "      <td>NaN</td>\n",
@@ -239,7 +237,6 @@
        "      <td>GBP</td>\n",
        "      <td>20.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>Hello \\n\\nI need a quick designer to make 4 pi...</td>\n",
        "      <td>NaN</td>\n",
@@ -253,7 +250,6 @@
        "      <td>GBP</td>\n",
        "      <td>12.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>Hi - I need a bookkeeper to assist with bookke...</td>\n",
        "      <td>NaN</td>\n",
@@ -268,24 +264,24 @@
        "1    Make my picture a solid silhouette   Video, Photo & Image           1   \n",
        "2                      Bookkeeper needed              Business           1   \n",
        "\n",
-       "      Sub Category Name Currency  Budget Location Freelancer Preferred From  \\\n",
-       "0        Graphic Design      EUR    60.0   remote                       ALL   \n",
-       "1         Image Editing      GBP    20.0   remote                       ALL   \n",
-       "2  Finance & Accounting      GBP    12.0   remote                       ALL   \n",
+       "      Sub Category Name Currency  Budget Location         Type  \\\n",
+       "0        Graphic Design      EUR    60.0   remote  fixed_price   \n",
+       "1         Image Editing      GBP    20.0   remote  fixed_price   \n",
+       "2  Finance & Accounting      GBP    12.0   remote  fixed_price   \n",
        "\n",
-       "          Type                                        Description Duration  \n",
-       "0  fixed_price  We are looking to improve the banner images on...      NaN  \n",
-       "1  fixed_price  Hello \\n\\nI need a quick designer to make 4 pi...      NaN  \n",
-       "2  fixed_price  Hi - I need a bookkeeper to assist with bookke...      NaN  "
+       "                                         Description Duration  \n",
+       "0  We are looking to improve the banner images on...      NaN  \n",
+       "1  Hello \\n\\nI need a quick designer to make 4 pi...      NaN  \n",
+       "2  Hi - I need a bookkeeper to assist with bookke...      NaN  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df.drop('Date Posted', axis=1)\n",
+    "df = df.drop(['Date Posted', 'Freelancer Preferred From'], axis=1)\n",
     "df = df.filter(regex=r'^(?!.*Client).*$', axis=1)\n",
     "\n",
     "experience_mapping = {'Entry ($)': 1, 'Intermediate ($$)': 2, 'Expert ($$$)': 3}\n",
@@ -296,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +330,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fixed_price' 'hourly']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_type = df['Type'].unique()\n",
+    "print(unique_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +411,6 @@
        "      <th>Currency</th>\n",
        "      <th>Budget</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Freelancer Preferred From</th>\n",
        "      <th>Type</th>\n",
        "      <th>Description</th>\n",
        "      <th>Duration</th>\n",
@@ -413,7 +426,6 @@
        "      <td>USD</td>\n",
        "      <td>10.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>I need a web developer who can connect python ...</td>\n",
        "      <td>NaN</td>\n",
@@ -427,7 +439,6 @@
        "      <td>GBP</td>\n",
        "      <td>50.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>I need someone to write a quick SQL query on a...</td>\n",
        "      <td>NaN</td>\n",
@@ -441,7 +452,6 @@
        "      <td>USD</td>\n",
        "      <td>30.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>Hello\\nHaving work related to python. There ar...</td>\n",
        "      <td>NaN</td>\n",
@@ -455,7 +465,6 @@
        "      <td>GBP</td>\n",
        "      <td>153.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>HI \\n\\nI have a VBA script that I would like c...</td>\n",
        "      <td>NaN</td>\n",
@@ -469,7 +478,6 @@
        "      <td>USD</td>\n",
        "      <td>140.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>Hello all. I have a Sports website that is wri...</td>\n",
        "      <td>NaN</td>\n",
@@ -483,7 +491,6 @@
        "      <td>GBP</td>\n",
        "      <td>264.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>I would like to send all invoices from magento...</td>\n",
        "      <td>NaN</td>\n",
@@ -497,7 +504,6 @@
        "      <td>USD</td>\n",
        "      <td>10.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>hourly</td>\n",
        "      <td>We have a custom system built on VB and hosted...</td>\n",
        "      <td>NaN</td>\n",
@@ -511,7 +517,6 @@
        "      <td>USD</td>\n",
        "      <td>320.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>Hi, I'm looking for a Python Django developer ...</td>\n",
        "      <td>NaN</td>\n",
@@ -525,7 +530,6 @@
        "      <td>GBP</td>\n",
        "      <td>30.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>I need someone to write a quick SQL query base...</td>\n",
        "      <td>NaN</td>\n",
@@ -539,7 +543,6 @@
        "      <td>USD</td>\n",
        "      <td>50.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>I am looking for freelance who can get tick by...</td>\n",
        "      <td>NaN</td>\n",
@@ -573,17 +576,17 @@
        "12216  Technology & Programming           1                  Databases   \n",
        "9831   Technology & Programming           1       Programming & Coding   \n",
        "\n",
-       "      Currency  Budget Location Freelancer Preferred From         Type  \\\n",
-       "330        USD    10.0   remote                       ALL  fixed_price   \n",
-       "12219      GBP    50.0   remote                       ALL  fixed_price   \n",
-       "10378      USD    30.0   remote                       ALL  fixed_price   \n",
-       "4541       GBP   153.0   remote                       ALL  fixed_price   \n",
-       "5552       USD   140.0   remote                       ALL  fixed_price   \n",
-       "4565       GBP   264.0   remote                       ALL  fixed_price   \n",
-       "6757       USD    10.0   remote                       ALL       hourly   \n",
-       "231        USD   320.0   remote                       ALL  fixed_price   \n",
-       "12216      GBP    30.0   remote                       ALL  fixed_price   \n",
-       "9831       USD    50.0   remote                       ALL  fixed_price   \n",
+       "      Currency  Budget Location         Type  \\\n",
+       "330        USD    10.0   remote  fixed_price   \n",
+       "12219      GBP    50.0   remote  fixed_price   \n",
+       "10378      USD    30.0   remote  fixed_price   \n",
+       "4541       GBP   153.0   remote  fixed_price   \n",
+       "5552       USD   140.0   remote  fixed_price   \n",
+       "4565       GBP   264.0   remote  fixed_price   \n",
+       "6757       USD    10.0   remote       hourly   \n",
+       "231        USD   320.0   remote  fixed_price   \n",
+       "12216      GBP    30.0   remote  fixed_price   \n",
+       "9831       USD    50.0   remote  fixed_price   \n",
        "\n",
        "                                             Description Duration  \n",
        "330    I need a web developer who can connect python ...      NaN  \n",
@@ -598,7 +601,7 @@
        "9831   I am looking for freelance who can get tick by...      NaN  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +646,6 @@
        "      <th>Currency</th>\n",
        "      <th>Budget</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Freelancer Preferred From</th>\n",
        "      <th>Type</th>\n",
        "      <th>Description</th>\n",
        "      <th>Duration</th>\n",
@@ -659,7 +661,6 @@
        "      <td>USD</td>\n",
        "      <td>140.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>Hello all. I have a Sports website that is wri...</td>\n",
        "      <td>NaN</td>\n",
@@ -675,14 +676,14 @@
        "                 Category Name  Experience     Sub Category Name Currency  \\\n",
        "5552  Technology & Programming           1  Programming & Coding      USD   \n",
        "\n",
-       "      Budget Location Freelancer Preferred From         Type  \\\n",
-       "5552   140.0   remote                       ALL  fixed_price   \n",
+       "      Budget Location         Type  \\\n",
+       "5552   140.0   remote  fixed_price   \n",
        "\n",
        "                                            Description Duration  \n",
        "5552  Hello all. I have a Sports website that is wri...      NaN  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +726,6 @@
        "      <th>Currency</th>\n",
        "      <th>Budget</th>\n",
        "      <th>Location</th>\n",
-       "      <th>Freelancer Preferred From</th>\n",
        "      <th>Type</th>\n",
        "      <th>Description</th>\n",
        "      <th>Duration</th>\n",
@@ -741,7 +741,6 @@
        "      <td>USD</td>\n",
        "      <td>140.0</td>\n",
        "      <td>remote</td>\n",
-       "      <td>ALL</td>\n",
        "      <td>fixed_price</td>\n",
        "      <td>Hello all. I have a Sports website that is wri...</td>\n",
        "      <td>NaN</td>\n",
@@ -757,14 +756,14 @@
        "                 Category Name  Experience     Sub Category Name Currency  \\\n",
        "5552  Technology & Programming           1  Programming & Coding      USD   \n",
        "\n",
-       "      Budget Location Freelancer Preferred From         Type  \\\n",
-       "5552   140.0   remote                       ALL  fixed_price   \n",
+       "      Budget Location         Type  \\\n",
+       "5552   140.0   remote  fixed_price   \n",
        "\n",
        "                                            Description Duration  \n",
        "5552  Hello all. I have a Sports website that is wri...      NaN  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
