--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "2        Paralegal  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "2  Hi - I need a bookkeeper to assist with bookke...      NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,75 +292,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Design' 'Video, Photo & Image' 'Business' 'Digital Marketing'\n",
-      " 'Technology & Programming' 'Music & Audio' 'Social Media'\n",
-      " 'Marketing, Branding & Sales' 'Writing & Translation']\n"
-     ]
-    }
-   ],
-   "source": [
-    "unique_categories = df['Category Name'].unique()\n",
-    "print(unique_categories)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(107,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "unique_sub_categories = df['Sub Category Name'].unique()\n",
-    "print(unique_sub_categories.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['fixed_price' 'hourly']\n"
-     ]
-    }
-   ],
-   "source": [
-    "unique_type = df['Type'].unique()\n",
-    "print(unique_type)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_words = [\"python\", 'SQL', 'sk-learn']\n",
-    "\n",
+    "input_words = [\"python\", 'SQL', 'sk-learn']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "stop_words = set(stopwords.words('english'))\n",
     "input_words = [word.lower() for word in input_words if word.lower() not in stop_words]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,232 +331,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Category Name</th>\n",
-       "      <th>Experience</th>\n",
-       "      <th>Sub Category Name</th>\n",
-       "      <th>Currency</th>\n",
-       "      <th>Budget</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Duration</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>330</th>\n",
-       "      <td>Connection between Python code and Laravel Pro...</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Website Development</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>I need a web developer who can connect python ...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12219</th>\n",
-       "      <td>Simple SQL Query</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Data Science &amp; Analysis</td>\n",
-       "      <td>GBP</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>I need someone to write a quick SQL query on a...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10378</th>\n",
-       "      <td>PYTHON PROJECT</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Data Science &amp; Analysis</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>Hello\\nHaving work related to python. There ar...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4541</th>\n",
-       "      <td>Convert VBA to Python</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Programming &amp; Coding</td>\n",
-       "      <td>GBP</td>\n",
-       "      <td>153.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>HI \\n\\nI have a VBA script that I would like c...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5552</th>\n",
-       "      <td>Need to parameterize sql statements in website...</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Programming &amp; Coding</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>Hello all. I have a Sports website that is wri...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4565</th>\n",
-       "      <td>M2 interacting with an external  SQL database</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>3</td>\n",
-       "      <td>eCommerce CMS Development</td>\n",
-       "      <td>GBP</td>\n",
-       "      <td>264.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>I would like to send all invoices from magento...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6757</th>\n",
-       "      <td>Got a complex system need a long term helper V...</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Programming &amp; Coding</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>hourly</td>\n",
-       "      <td>We have a custom system built on VB and hosted...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>Python Django developer</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Website Development</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>320.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>Hi, I'm looking for a Python Django developer ...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12216</th>\n",
-       "      <td>Simple SQL Query</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Databases</td>\n",
-       "      <td>GBP</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>I need someone to write a quick SQL query base...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9831</th>\n",
-       "      <td>Software developer for indian stock market</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Programming &amp; Coding</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>I am looking for freelance who can get tick by...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   Title  \\\n",
-       "330    Connection between Python code and Laravel Pro...   \n",
-       "12219                                   Simple SQL Query   \n",
-       "10378                                     PYTHON PROJECT   \n",
-       "4541                              Convert VBA to Python    \n",
-       "5552   Need to parameterize sql statements in website...   \n",
-       "4565       M2 interacting with an external  SQL database   \n",
-       "6757   Got a complex system need a long term helper V...   \n",
-       "231                             Python Django developer    \n",
-       "12216                                   Simple SQL Query   \n",
-       "9831          Software developer for indian stock market   \n",
-       "\n",
-       "                  Category Name  Experience          Sub Category Name  \\\n",
-       "330    Technology & Programming           1        Website Development   \n",
-       "12219  Technology & Programming           1    Data Science & Analysis   \n",
-       "10378  Technology & Programming           1    Data Science & Analysis   \n",
-       "4541   Technology & Programming           1       Programming & Coding   \n",
-       "5552   Technology & Programming           1       Programming & Coding   \n",
-       "4565   Technology & Programming           3  eCommerce CMS Development   \n",
-       "6757   Technology & Programming           1       Programming & Coding   \n",
-       "231    Technology & Programming           3        Website Development   \n",
-       "12216  Technology & Programming           1                  Databases   \n",
-       "9831   Technology & Programming           1       Programming & Coding   \n",
-       "\n",
-       "      Currency  Budget Location         Type  \\\n",
-       "330        USD    10.0   remote  fixed_price   \n",
-       "12219      GBP    50.0   remote  fixed_price   \n",
-       "10378      USD    30.0   remote  fixed_price   \n",
-       "4541       GBP   153.0   remote  fixed_price   \n",
-       "5552       USD   140.0   remote  fixed_price   \n",
-       "4565       GBP   264.0   remote  fixed_price   \n",
-       "6757       USD    10.0   remote       hourly   \n",
-       "231        USD   320.0   remote  fixed_price   \n",
-       "12216      GBP    30.0   remote  fixed_price   \n",
-       "9831       USD    50.0   remote  fixed_price   \n",
-       "\n",
-       "                                             Description Duration  \n",
-       "330    I need a web developer who can connect python ...      NaN  \n",
-       "12219  I need someone to write a quick SQL query on a...      NaN  \n",
-       "10378  Hello\\nHaving work related to python. There ar...      NaN  \n",
-       "4541   HI \\n\\nI have a VBA script that I would like c...      NaN  \n",
-       "5552   Hello all. I have a Sports website that is wri...      NaN  \n",
-       "4565   I would like to send all invoices from magento...      NaN  \n",
-       "6757   We have a custom system built on VB and hosted...      NaN  \n",
-       "231    Hi, I'm looking for a Python Django developer ...      NaN  \n",
-       "12216  I need someone to write a quick SQL query base...      NaN  \n",
-       "9831   I am looking for freelance who can get tick by...      NaN  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "similarities = cosine_similarity(input_vector, job_vectors)\n",
     "top_indices = np.argsort(similarities[0])[-10:][::-1]\n",
@@ -615,79 +343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Category Name</th>\n",
-       "      <th>Experience</th>\n",
-       "      <th>Sub Category Name</th>\n",
-       "      <th>Currency</th>\n",
-       "      <th>Budget</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Duration</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5552</th>\n",
-       "      <td>Need to parameterize sql statements in website...</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Programming &amp; Coding</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>Hello all. I have a Sports website that is wri...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  Title  \\\n",
-       "5552  Need to parameterize sql statements in website...   \n",
-       "\n",
-       "                 Category Name  Experience     Sub Category Name Currency  \\\n",
-       "5552  Technology & Programming           1  Programming & Coding      USD   \n",
-       "\n",
-       "      Budget Location         Type  \\\n",
-       "5552   140.0   remote  fixed_price   \n",
-       "\n",
-       "                                            Description Duration  \n",
-       "5552  Hello all. I have a Sports website that is wri...      NaN  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "top_jobs = top_jobs[(top_jobs['Budget'] >= salary_range[0]) & (top_jobs['Budget'] <= salary_range[1])]\n",
     "top_jobs"
@@ -695,97 +353,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Category Name</th>\n",
-       "      <th>Experience</th>\n",
-       "      <th>Sub Category Name</th>\n",
-       "      <th>Currency</th>\n",
-       "      <th>Budget</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Duration</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5552</th>\n",
-       "      <td>Need to parameterize sql statements in website...</td>\n",
-       "      <td>Technology &amp; Programming</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Programming &amp; Coding</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>remote</td>\n",
-       "      <td>fixed_price</td>\n",
-       "      <td>Hello all. I have a Sports website that is wri...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  Title  \\\n",
-       "5552  Need to parameterize sql statements in website...   \n",
-       "\n",
-       "                 Category Name  Experience     Sub Category Name Currency  \\\n",
-       "5552  Technology & Programming           1  Programming & Coding      USD   \n",
-       "\n",
-       "      Budget Location         Type  \\\n",
-       "5552   140.0   remote  fixed_price   \n",
-       "\n",
-       "                                            Description Duration  \n",
-       "5552  Hello all. I have a Sports website that is wri...      NaN  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "top_jobs = top_jobs[(top_jobs['Experience'] >= experience_range[0]) & (top_jobs['Experience'] <= experience_range[1])]\n",
     "top_jobs"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
